--- a/package.json
+++ b/package.json
@@ -1,26 +1,32 @@
 {
   "name": "drcreview",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
   "homepage": "https://stevenjs.github.io/DRCReView",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-regular-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.1",
+    "@types/jest": "^28.1.4",
+    "@types/node": "^18.0.1",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.6",
     "bootstrap": "^5.1.3",
-    "chart.js": "^3.6.1",
-    "gh-pages": "^3.2.3",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.0.2",
-    "react-chartjs-2": "^4.0.0",
-    "react-dom": "^17.0.2",
-    "react-papaparse": "^3.18.1",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "chart.js": "^3.8.0",
+    "gh-pages": "^4.0.0",
+    "html-react-parser": "^2.0.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
+    "react-chartjs-2": "^4.2.0",
+    "react-dom": "^18.2.0",
+    "react-papaparse": "^4.0.2",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.7.4",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
