--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage --watch=false"
   },
   "eslintConfig": {
     "extends": [
@@ -52,6 +54,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.1.1",
-    "vite": "^4.5.0"
+    "@vitest/coverage-v8": "^0.34.6",
+    "jsdom": "^22.1.0",
+    "vite": "^4.5.0",
+    "vitest": "^0.34.6"
   }
 }
