--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "drcreview",
   "version": "0.3.0",
+  "type": "module",
   "private": true,
   "homepage": "https://stevenjs.github.io/DRCReView",
   "dependencies": {
@@ -8,24 +9,18 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.1.0",
-    "@testing-library/user-event": "^14.5.1",
-    "@types/jest": "^29.5.8",
-    "@types/node": "^20.9.0",
+    "@types/node": "^20.9.2",
     "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
-    "gh-pages": "^6.0.0",
+    "gh-pages": "^6.1.0",
     "html-react-parser": "^5.0.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-papaparse": "^4.4.0",
-    "typescript": "^5.2.2",
-    "web-vitals": "^3.5.0"
+    "typescript": "^5.2.2"
   },
   "scripts": {
     "start": "vite",
@@ -33,12 +28,6 @@
     "serve": "vite preview",
     "test": "vitest",
     "test:coverage": "vitest run --coverage --watch=false"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -53,10 +42,10 @@
     ]
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.1.1",
+    "@vitejs/plugin-react": "^4.2.0",
     "@vitest/coverage-v8": "^0.34.6",
     "jsdom": "^22.1.0",
-    "vite": "^4.5.0",
+    "vite": "^5.0.0",
     "vitest": "^0.34.6"
   }
 }
